Fix few minor message alignment issues

--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,7 @@ header {
     box-sizing: border-box;
     background: $color;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), 0 0 2px rgba(0,0,0,0.1);
-    z-index: 1000;
+    z-index: 10000;
     color: #fff;
     .icon-wrap {
         z-index: 100;
